
name:                ethereum-test
version:             0.1.0.0
author:              jamshid
maintainer:          jamshid
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <=4.9
                     , nibblestring
                     , either
                     , ethereum-vm
                     , blockapps-data
                     , merkle-patricia-db
                     , ethereum-rlp
                     , blockapps-util
                     , haskoin
                     , IfElse
                     , time
                     , transformers
                     , resourcet
                     , aeson
                     , binary
                     , bytestring
                     , base16-bytestring
                     , cryptohash
                     , unordered-containers
                     , mtl
                     , containers
                     , scientific
                     , text
                     , directory
                     , ansi-wl-pprint
                     , monad-logger
                     , strato-p2p-client
                     , hflags
                     , fast-ecrecover
                     , ethereum-encryption
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010
  other-modules:       TestFiles,
                       TestDescriptions,
                       TestEthereum
                       
Test-Suite test-ethereum-test
  default-language: Haskell98
  type:             exitcode-stdio-1.0
  main-is:          TestMain.hs
  hs-source-dirs:   test, src
  build-depends:    base >=4 && < 5
                  , data-default
                  , leveldb-haskell
                  , resourcet
                  , bytestring
                  , base16-bytestring
                  , transformers
                  , binary
                  , mtl
                  , containers
                  , HUnit
                  , test-framework
                  , test-framework-hunit 
